Refactoring how owner spots are populated
